2010-04-24  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR fortran/43832
	* io.c (gfc_match_open): Remove branch to syntax error. Add call to
	gfc_error with new error message.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@158684 138bc75d-0d04-0410-961f-82ee72b054a4